--- a/style.css
+++ b/style.css
@@ -1,5 +1,16 @@
 body {
     margin: 0;
-    background: blue;
+    background: pink;
     text-align: center;
+}
+
+button {
+    background-color: crimson;
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
 }
