--- a/style.css
+++ b/style.css
@@ -4,8 +4,25 @@ body {
     text-align: center;
 }
 
+tab {
+    overflow: hidden;
+    border: 1px solid cadetblue;
+    background-color: black;
+}
+
 button {
     background-color: crimson;
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+}
+
+button1 {
+    background-color: inherit;
     border: none;
     color: white;
     padding: 15px 32px;
