--- a/style.css
+++ b/style.css
@@ -21,13 +21,23 @@ button {
     font-size: 16px;
 }
 
+button:hover {
+    background-color: #34bd38;
+    color: white;
+  }
+
 button1 {
     background-color: inherit;
     border: none;
-    color: white;
+    color: rgb(160, 189, 32);
     padding: 15px 32px;
     text-align: center;
     text-decoration: none;
     display: inline-block;
     font-size: 16px;
 }
+
+button1:hover {
+    background-color: #34bdbd;
+    color: black;
+  }
