--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@ button:hover {
   }
 
 button1 {
-    background-color: inherit;
+    background-color: blue;
     border: none;
     color: rgb(160, 189, 32);
     padding: 15px 32px;
