Added sidenav to style.css

--- a/style.css
+++ b/style.css
@@ -4,6 +4,24 @@ body {
     text-align: center;
 }
 
+sidenav {
+    margin: 0;
+    padding: 0;
+    width: 200px;
+    background-color: rgb(100, 91, 91);
+    position: fixed;
+    height: 100%;
+    overflow: auto;
+
+}
+
+sidenav a {
+    display: block;
+    color: black;
+    padding: 16px;
+    text-decoration: none;
+}
+
 tab {
     overflow: visible;
     border: 1px solid cadetblue;
