--- a/style.css
+++ b/style.css
@@ -59,3 +59,12 @@ button1:hover {
     background-color: #34bdbd;
     color: black;
   }
+
+@media screen and (max-width: 700px) {
+sidenav {
+    width: 100%;
+    height: auto;
+    position: relative;
+}
+sidenav a {float: left;}
+}
