Fixed project typo added div css styling

--- a/index style.css
+++ b/index style.css
@@ -4,6 +4,18 @@ body {
     text-align: center;
 }
 
+div {
+    height: 200px;
+    width: 400px;
+    background: black;
+
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    margin-top: -100px;
+    margin-left: -200px;
+}
+
 sidenav {
     margin: 0;
     padding: 0;
