Added center styling

--- a/index style.css
+++ b/index style.css
@@ -1,19 +1,14 @@
 body {
     margin: 0;
-    background: grey;
+    background: black;
     text-align: center;
 }
 
-div {
-    height: 200px;
-    width: 400px;
-    background: black;
-
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    margin-top: -100px;
-    margin-left: -200px;
+content {
+    max-width: 500px;
+    margin: auto;
+    background: darkgrey;
+    padding: 10px;
 }
 
 sidenav {
