--- a/index style.css
+++ b/index style.css
@@ -1,7 +1,8 @@
+html, body {
+    margin: 0; padding: 0; border: 0; 
+}
 body {
-    margin: 0;
-    background: purple;
-    text-align: center;
+    background: #ccc
 }
 
 #left, #right {
@@ -11,11 +12,11 @@ body {
     top: 0
 }
 #left {
-    background: black;
+    background: grey;
     left: 0
 }
 #right {
-    background: black;
+    background: grey;
     right: 0
 }
 #main {
