--- a/style.css
+++ b/style.css
@@ -146,6 +146,21 @@ sidenav {
     height:1000px
 }
 
+#title {
+    font-family: 'Helvetica Neue', sans-serif;
+    color: white;
+    background-color: #333;
+    font-size: 150%; 
+    font-weight: 100; 
+    line-height: 20px; 
+    letter-spacing: 1px; 
+    padding: 0 0 5px; 
+    border-bottom: double #555; 
+    border: 2px solid darkgray;
+    -webkit-text-fill-color: transparent;
+    -webkit-text-stroke: 0.5px;
+}
+
 
 sidenav a {float: left;}
 
