--- a/style.css
+++ b/style.css
@@ -13,20 +13,24 @@ body {
     font-weight: 100; 
     line-height: 20px; 
     letter-spacing: 1px; 
-    padding: 0 0 5px; 
+    padding: 0 0 1px; 
     border-bottom: double #555; 
     border: 2px solid darkgray;
-    -webkit-text-fill-color: transparent;
-    -webkit-text-stroke: 0.5px;
+    -webkit-text-fill-color: rgba(255, 255, 255, 0.75);
+    -webkit-text-stroke: 0.8px;
 }
 
 h2{
     font-size: 100%;
 }
 
+hr{
+   color: white;
+   width: 90%;
+}
 
 #main {
-    background: rgb(189, 180, 180);
+    background: rgb(107, 104, 104);
     width: 70%;
     position: static;
     float: centre;
@@ -36,7 +40,7 @@ h2{
     height:1000px
 }
 
-.sidenav-alignment{
+.topnav-alignment{
     width: 70%;
     background-color: #333;
     position: relative;
@@ -47,12 +51,12 @@ h2{
     margin: auto;
 }
 
-.sidenav {
+.topnav {
     overflow: auto;
     background-color: #333;
 }
 
-.sidenav a {
+.topnav a {
     width: 20%;
     float: left;
     position: relative;
@@ -64,14 +68,14 @@ h2{
     
 }
 
-.sidenav a:hover {
+.topnav a:hover {
     background-color: lightgrey;
     color: black;
 }
 
-.sidenav a.active {
-    background-color: green;
-    color: black;
+.topnav a.active {
+    background-color: darkslategray;
+    color: white;
   }
 
 tab {
@@ -98,18 +102,18 @@ button:hover {
 
 /* Mobile settings */
 @media screen and (max-width: 850px) {
-sidenav {
+topnav {
     width: 100%;
     height: auto;
     position: relative;
 }
 
-.sidenav-alignment{
-    width: 92.5%;
+.topnav-alignment{
+    width: auto;
 }
 
 #main {
-    background: rgb(189, 180, 180);
+    background: rgb(107, 104, 104);
     width: 92.5%;
     position: relative;
     float: centre;
@@ -128,7 +132,7 @@ sidenav {
     font-weight: 100; 
     line-height: 20px; 
     letter-spacing: 1px; 
-    padding: 0 0 5px; 
+    padding: 0 0 1px; 
     border-bottom: double #555; 
     border: 2px solid darkgray;
     -webkit-text-fill-color: transparent;
