--- a/style.css
+++ b/style.css
@@ -20,13 +20,51 @@ body {
     -webkit-text-stroke: 0.8px;
 }
 
+#smalltitle {
+    font-family: 'Helvetica Neue', sans-serif;
+    color: white;
+    background-color: #333;
+    width: 75%;
+    margin: auto;
+    text-align: center;
+    font-size: 150%; 
+    font-weight: 100; 
+    line-height: 16px; 
+    letter-spacing: 1px; 
+    padding: 0 0 1px; 
+    border-bottom: double #555;    
+    border: 2px solid darkgray;
+    -webkit-text-fill-color: rgba(255, 255, 255, 0.75);
+    -webkit-text-stroke: 0.8px;
+}
+
+#smalltitle.c {
+    font-family: 'Helvetica Neue', sans-serif;
+    color: white;
+    background-color: #333;
+    width: 75%;
+    margin: auto;
+    text-align: center;
+    font-size: 150%; 
+    font-weight: 100; 
+    line-height: 16px; 
+    letter-spacing: 1px; 
+    padding: 0 0 1px; 
+    border-bottom: double #555;    
+    border: 2px solid darkgray;
+    -webkit-text-fill-color: rgba(255, 255, 255, 0.75);
+    -webkit-text-stroke: 0.8px;
+}
+
 h2{
-    font-size: 100%;
+    font-family: "Lucida Console", "Courier New", monospace;
+    color: #333;
+    font-size: 90%;
 }
 
 hr{
    color: white;
-   width: 90%;
+   width: 80%;
 }
 
 #main {
@@ -101,7 +139,7 @@ button:hover {
   }
 
 /* Mobile settings */
-@media screen and (max-width: 850px) {
+@media screen and (max-width: 800px) {
 topnav {
     width: 100%;
     height: auto;
@@ -122,7 +160,7 @@ topnav {
     padding: 10px;
     height:1000px
 }
-
+/* 
 #title {
     font-family: 'Helvetica Neue', sans-serif;
     color: white;
@@ -138,13 +176,52 @@ topnav {
     -webkit-text-fill-color: transparent;
     -webkit-text-stroke: 0.5px;
     white-space: normal;
+} */
+
+#title {
+    font-family: 'Helvetica Neue', sans-serif;
+    color: white;
+    background-color: #333;
+    font-size: 250%; 
+    font-weight: 100; 
+    line-height: 20px; 
+    letter-spacing: 1px; 
+    padding: 0 0 1px; 
+    border-bottom: double #555; 
+    border: 2px solid darkgray;
+    -webkit-text-fill-color: rgba(255, 255, 255, 0.75);
+    -webkit-text-stroke: 0.8px;
+}
+
+#smalltitle {
+    font-family: 'Helvetica Neue', sans-serif;
+    color: white;
+    background-color: #333;
+    width: relative;
+    margin: auto;
+    text-align: center;
+    font-size: 100%; 
+    font-weight: 100; 
+    line-height: 16px; 
+    letter-spacing: 1px; 
+    padding: 0 0 1px; 
+    border-bottom: double #555;    
+    border: 2px solid darkgray;
+    -webkit-text-fill-color: rgba(255, 255, 255, 0.75);
+    -webkit-text-stroke: 0.8px;
 }
 
 }
 
-@media screen and (max-width: 500px) {
+@media only screen and (max-width: 651px) {
     #title
     {
-        font-size: 150%;
+        font-size:5vw;
     }
+    #smalltitle {
+        background-color: lightblue;
+        font-size:3vw;
+      }
 }
+
+
