--- a/style.css
+++ b/style.css
@@ -47,7 +47,6 @@ body {
     background-color: #333;
     width: 75%;
     margin: auto;
-    text-align: center;
     font-size: 150%;
     font-weight: 100;
     line-height: 16px;
@@ -65,7 +64,6 @@ body {
     background-color: #333;
     width: 75%;
     margin: auto;
-    text-align: center;
     font-size: 150%;
     font-weight: 100;
     line-height: 16px;
@@ -81,10 +79,14 @@ body {
 
 /* #region || HEADINGS */
 
+h1 {
+    text-align: center;
+}
+
 h2 {
     font-family: "Lucida Console", "Courier New", monospace;
     color: #333;
-    font-size: 90%;
+    font-size: 100%;
 }
 
 /* #endregion */
@@ -104,6 +106,7 @@ h2 {
 
 .topnav {
     overflow: auto;
+    text-align: left;
     background-color: #333;
 }
 
@@ -134,16 +137,41 @@ h2 {
 /* #region || IMAGES */
 
 img {
-    max-width: 95%;
+    max-width: 100%;
     height: auto;
 }
 
-img:hover {
-    transition: 200ms;
+.alignleft
+{
+    text-align: left;
+}
+
+.aligncenter
+{
+    text-align: center;
+}
+
+.interactable
+{
+    max-width: 95%;
+    transition: transform .2s;
+}
+
+.interactable:hover
+{
+    -ms-transform: scale(1.5); /* IE 9 */
+    -webkit-transform: scale(1.5); /* Safari 3-8 */
     transform: scale(1.05);
     opacity: 0.9;
     border: #333;
 }
+
+.circle {
+    max-width: 20%;
+    text-align: left;
+    border-radius: 50%;
+}
+
 
 /* #endregion */
 
@@ -159,7 +187,7 @@ br {
     margin: 10px 0;
 }
 
-.box {
+/* .box {
     text-align: center;
     width: 100px;
     height: 100px;
@@ -177,7 +205,7 @@ br {
 
 .wine {
     background: #ae163e;
-}
+} */
 
 /* #endregion */
 
