--- a/style.css
+++ b/style.css
@@ -11,7 +11,8 @@ body {
 
 /* #region || GENERAL STYLES */
 
-#main {
+.main {
+    /* animation: 0.6s ease-out 0s 1 loadDown; */
     background: rgb(107, 104, 104);
     width: 70%;
     position: static;
@@ -26,24 +27,24 @@ body {
 
 /* #region || TITLES */
 
-#title {
-    font-family: 'Helvetica Neue', sans-serif;
-    color: white;
+.title {
+    font-family: 'Lucida Console', sans-serif;
+    color: black;
     background-color: #333;
     font-size: 250%;
     font-weight: 100;
     line-height: 20px;
     letter-spacing: 1px;
-    padding: 0 0 1px;
+    padding: 1px 1px 1px;
     border-bottom: double #555;
     border: 2px solid darkgray;
-    -webkit-text-fill-color: rgba(255, 255, 255, 0.75);
-    -webkit-text-stroke: 0.8px;
+    /* -webkit-text-fill-color: rgb(255, 255, 255);
+    -webkit-text-stroke: 1px; */
 }
 
-#smalltitle {
-    font-family: 'Helvetica Neue', sans-serif;
-    color: white;
+.smalltitle {
+    font-family: 'Lucida Console', sans-serif;
+    color: black;
     background-color: #333;
     width: 75%;
     margin: auto;
@@ -59,7 +60,7 @@ body {
     -webkit-text-stroke: 0.8px;
 }
 
-#smalltitle.c {
+.smalltitle.c {
     font-family: 'Helvetica Neue', sans-serif;
     color: white;
     background-color: #333;
@@ -230,7 +231,7 @@ tab {
         width: auto;
     }
 
-    #main {
+    .main {
         background: rgb(107, 104, 104);
         width: 92.5%;
         position: relative;
@@ -241,7 +242,7 @@ tab {
         height: 1000px
     }
 
-    #title {
+    .title {
         font-family: 'Helvetica Neue', sans-serif;
         color: white;
         background-color: #333;
@@ -256,7 +257,7 @@ tab {
         -webkit-text-stroke: 0.8px;
     }
 
-    #smalltitle {
+    .smalltitle {
         font-family: 'Helvetica Neue', sans-serif;
         color: white;
         background-color: #333;
@@ -274,6 +275,15 @@ tab {
         -webkit-text-stroke: 0.8px;
     }
 
+}
+
+@keyframes loadDown {
+    0% {
+        transform: translateX(-100%);
+    }
+    100% {
+        transform: translateX(0);
+    }
 }
 
 @media only screen and (max-width: 651px) {
