--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ body {
 
 .title {
     font-family: 'Lucida Console', sans-serif;
-    color: black;
+    color: white;
     background-color: #333;
     font-size: 250%;
     font-weight: 100;
@@ -44,7 +44,7 @@ body {
 
 .smalltitle {
     font-family: 'Lucida Console', sans-serif;
-    color: black;
+    color: white;
     background-color: #333;
     width: 75%;
     margin: auto;
@@ -56,8 +56,6 @@ body {
     padding: 0 10px 20px;
     border-bottom: double #555;
     border: 2px solid darkgray;
-    -webkit-text-fill-color: rgba(255, 255, 255, 0.75);
-    -webkit-text-stroke: 0.8px;
 }
 
 .smalltitle.c {
@@ -74,8 +72,6 @@ body {
     padding: 0 0 1px;
     border-bottom: double #555;
     border: 2px solid darkgray;
-    -webkit-text-fill-color: rgba(255, 255, 255, 0.75);
-    -webkit-text-stroke: 0.8px;
 }
 
 #contacts {
@@ -90,7 +86,7 @@ body {
 
 h2 {
     font-family: "Lucida Console", "Courier New", monospace;
-    color: #333;
+    color: white;
     font-size: 90%;
 }
 
