--- a/style.css
+++ b/style.css
@@ -272,7 +272,7 @@ tab {
         top: 0;
         margin: auto;
         padding: 10px;
-        height: 1000px
+        height: auto;
     }
 
     .title {
@@ -286,15 +286,13 @@ tab {
         padding: 0 0 1px;
         border-bottom: double #555;
         border: 2px solid darkgray;
-        -webkit-text-fill-color: rgba(255, 255, 255, 0.75);
-        -webkit-text-stroke: 0.8px;
     }
 
-    .smallbox.c {
+    .smallbox {
         font-family: 'Helvetica Neue', sans-serif;
         color: white;
         background-color: #333;
-        width: relative;
+        width: 90%;
         margin: auto;
         text-align: center;
         font-size: 100%;
@@ -304,8 +302,53 @@ tab {
         padding: 0 0 1px;
         border-bottom: double #555;
         border: 2px solid darkgray;
-        -webkit-text-fill-color: rgba(255, 255, 255, 0.75);
-        -webkit-text-stroke: 0.8px;
+    }
+
+    .smallbox.l {
+        font-family: 'Helvetica Neue', sans-serif;
+        color: white;
+        background-color: #333;
+        width: 90%;
+        margin: auto;
+        text-align: center;
+        font-size: 100%;
+        font-weight: 100;
+        line-height: 16px;
+        letter-spacing: 1px;
+        padding: 0 0 1px;
+        border-bottom: double #555;
+        border: 2px solid darkgray;
+    }
+
+    button {
+        background-color: #04041ebf;
+        border: none;
+        color: white;
+        padding: 20px 50px;
+        text-decoration: none;
+        display: inline-block;
+        font-size: 20px;
+        transition: 200ms;
+        margin-right: 15px;
+        border-radius: 8px;
+    }
+
+    .backbutton {
+        background-color: #04041ebf;
+        border: none;
+        color: white;
+        padding: 10px 30px;
+        text-decoration: none;
+        display: inline-block;
+        font-size: 20px;
+        transition: 200ms;
+        margin-right: 15px;
+        border-radius: 8px;
+    }
+
+    hr {
+        color: white;
+        width: 90%;
     }
 
 }
@@ -324,9 +367,8 @@ tab {
         font-size: 5vw;
     }
 
-    #smallbox.smallbox.c {
-        background-color: lightblue;
-        font-size: 3vw;
+    #smallbox {
+        width: relative;
     }
 }
 
