--- a/style.css
+++ b/style.css
@@ -101,6 +101,10 @@ li{
     gap: 15px;
 }
 
+.description {
+    font-size: 20px;
+}
+
 /* #endregion */
 
 /* #region || HEADINGS */
@@ -249,6 +253,23 @@ tab {
     background-color: black;
 }
 
+.player-container {
+    aspect-ratio: 16 / 9;
+    width: 100%;
+    height: auto;
+}
+
+.itch-container {
+    width: auto;
+    height: auto;
+}
+
+iframe {
+    width: 100%;
+    /* height: auto;
+    object-fit: contain; */
+  }
+
 /* #endregion */
 
 /* #region || MOBILE SETTINGS */
@@ -316,7 +337,7 @@ tab {
         width: 90%;
         margin: auto;
         text-align: center;
-        font-size: 100%;
+        font-size: 2em;
         font-weight: 100;
         line-height: 16px;
         letter-spacing: 1px;
