--- a/style.css
+++ b/style.css
@@ -53,7 +53,7 @@ body {
     font-weight: 100;
     line-height: 16px;
     letter-spacing: 1px;
-    padding: 0 10px 20px;
+    padding: 10px 10px 20px;
     border-bottom: double #555;
     border: 2px solid darkgray;
 }
@@ -95,7 +95,7 @@ li{
     border-radius: 8px;
 }
 
-#contacts {
+.contacts {
     display: flex;
     justify-content: center;
     gap: 15px;
@@ -159,6 +159,22 @@ h2 {
     opacity: 1;
 }
 
+.footer
+{
+    position: fixed;
+    width: 100%;
+    
+    padding: 5px 0px 5px 10px;
+
+    background-color: rgba(0,0,0,0.85);
+    opacity: 50%;
+
+    color: white;
+    
+    bottom: 0;
+
+    font-size: 12px;
+}
 
 
 /* #endregion */
@@ -219,12 +235,12 @@ button {
     background-color: #04041ebf;
     border: none;
     color: white;
+    /* padding: 30px 75px; */
     padding: 30px 75px;
     text-decoration: none;
     display: inline-block;
     font-size: 30px;
     transition: 200ms;
-    margin-right: 15px;
     border-radius: 8px;
 }
 
@@ -350,7 +366,7 @@ iframe {
         background-color: #04041ebf;
         border: none;
         color: white;
-        padding: 20px 50px;
+        padding: 20px 0px;
         text-decoration: none;
         display: inline-block;
         font-size: 20px;
