--- a/style.css
+++ b/style.css
@@ -6,18 +6,18 @@ body {
 }
 
 body {
-    background: rgba(0, 0, 0, 0.85);
+    background: #202231;
 }
 
 /* #region || GENERAL STYLES */
 
 .main {
     /* animation: 0.6s ease-out 0s 1 loadDown; */
-    background: rgb(107, 104, 104);
-    width: 70%;
+    background: #67615F;
+    width: 50%;
     position: static;
     float: centre;
-    top: 0;
+    top: 0;  
     margin: auto;
     padding: 20px;
     height: auto;
@@ -30,14 +30,18 @@ body {
 .title {
     font-family: 'Lucida Console', sans-serif;
     color: white;
-    background-color: #333;
+    background-color: #081f3c;
     font-size: 250%;
     font-weight: 100;
     line-height: 20px;
     letter-spacing: 1px;
     padding: 1px 1px 1px;
+    width: 75%;
+    margin: auto;
+    text-align: center;
     border-bottom: double #555;
-    border: 2px solid darkgray;
+    border: 2px solid white;
+    border-radius: 16px;
     /* -webkit-text-fill-color: rgb(255, 255, 255);
     -webkit-text-stroke: 1px; */
 }
@@ -45,7 +49,7 @@ body {
 .smallbox {
     font-family: 'Lucida Console', sans-serif;
     color: white;
-    background-color: #333;
+    background-color: #67615F;
     width: 75%;
     margin: auto;
     text-align: center;
@@ -55,13 +59,14 @@ body {
     letter-spacing: 1px;
     padding: 10px 10px 20px;
     border-bottom: double #555;
-    border: 2px solid darkgray;
+    border: 2px solid white;
+    border-radius: 8px;
 }
 
 .smallbox.l {
     font-family: 'Helvetica Neue', sans-serif;
     color: white;
-    background-color: #333;
+    background-color: #67615F;
     width: 75%;
     margin: auto;
     text-align: left;
@@ -71,7 +76,7 @@ body {
     letter-spacing: 1px;
     padding: 0 0 1px;
     border-bottom: double #555;
-    border: 2px solid darkgray;
+    border: 2px solid white;
 }
 
 .skills {
@@ -102,7 +107,7 @@ li{
 }
 
 .description {
-    font-size: 20px;
+    font-size: 16px;
 }
 
 /* #endregion */
@@ -120,8 +125,8 @@ h2 {
 /* #region || TOP NAV */
 
 .topnav-alignment {
-    width: 70%;
-    background-color: #333;
+    width: 50%;
+    background-color: #86878F;
     position: relative;
     float: centre;
     padding-left: 20px;
@@ -132,7 +137,7 @@ h2 {
 
 .topnav {
     overflow: auto;
-    background-color: #333;
+    background-color: #86878F;
 }
 
 .topnav a {
@@ -150,7 +155,7 @@ h2 {
 
 .topnav a.active {
     color: white;
-    border-bottom: 3px solid lightblue;
+    border-bottom: 3px solid #081f3c
 }
 
 .topnav a:hover {
@@ -199,7 +204,7 @@ img:hover {
 
 hr {
     color: white;
-    width: 80%;
+    width: 82.5%;
 }
 
 br {
@@ -213,18 +218,6 @@ br {
     height: 100px;
     margin: 5px;
     border: 1px solid rgba(0, 0, 0, .2);
-}
-
-.blue {
-    background: #13b4ff;
-}
-
-.purple {
-    background: #ab3fdd;
-}
-
-.wine {
-    background: #ae163e;
 }
 
 /* #endregion */
@@ -318,7 +311,6 @@ iframe {
     }
 
     .main {
-        background: rgb(107, 104, 104);
         width: 92.5%;
         position: relative;
         float: centre;
@@ -331,20 +323,17 @@ iframe {
     .title {
         font-family: 'Helvetica Neue', sans-serif;
         color: white;
-        background-color: #333;
         font-size: 250%;
         font-weight: 100;
         line-height: 20px;
         letter-spacing: 1px;
         padding: 0 0 1px;
         border-bottom: double #555;
-        border: 2px solid darkgray;
     }
 
     .smallbox {
         font-family: 'Helvetica Neue', sans-serif;
         color: white;
-        background-color: #333;
         width: 90%;
         margin: auto;
         text-align: center;
@@ -354,13 +343,11 @@ iframe {
         letter-spacing: 1px;
         padding: 0 0 1px;
         border-bottom: double #555;
-        border: 2px solid darkgray;
     }
 
     .smallbox.l {
         font-family: 'Helvetica Neue', sans-serif;
         color: white;
-        background-color: #333;
         width: 90%;
         margin: auto;
         text-align: center;
@@ -370,11 +357,9 @@ iframe {
         letter-spacing: 1px;
         padding: 0 0 1px;
         border-bottom: double #555;
-        border: 2px solid darkgray;
     }
 
     button {
-        background-color: #04041ebf;
         border: none;
         color: white;
         padding: 20px 0px;
@@ -387,7 +372,6 @@ iframe {
     }
 
     .backbutton {
-        background-color: #04041ebf;
         border: none;
         color: white;
         padding: 10px 30px;
