--- a/CSS/background.css
+++ b/CSS/background.css
@@ -7,6 +7,10 @@ body {
     overflow-y: scroll;
 }
 
+body {
+    background: var(--body-bg-color);
+}
+
 .main {
     /* animation: 0.6s ease-out 0s 1 loadDown; */
     background: var(--main-bg-color);
