Updated css files, changed colours to use root. Fixed some scaling issues on mobile

--- a/CSS/colours.css
+++ b/CSS/colours.css
@@ -3,4 +3,6 @@
     --main-otherlight-color: wheat;
     --body-bg-color: #202231;
     --main-bg-color: #67615F;
+    --topnav-color: #86878F;
+    --title-color: #081f3c;
   }
