--- a/CSS/background.css
+++ b/CSS/background.css
@@ -14,14 +14,21 @@ body {
 .main {
     /* animation: 0.6s ease-out 0s 1 loadDown; */
     background: var(--main-bg-color);
-    width: 50%;
+    width: 55%;
     top: 0;  
-    display: flex;
+    /* display: flex;
     flex-direction: column;
     flex-wrap: wrap;
-    flex-grow: 4;
+    flex-grow: 4; */
     margin: auto;
     position: relative;
     padding: 20px;
     height: auto;
+}
+
+@media (max-width: 768px)
+{
+    .main {
+        width: 90%;
+    }
 }
