--- a/CSS/background.css
+++ b/CSS/background.css
@@ -5,6 +5,13 @@ body {
     border: 0;
     overflow-x: hidden;
     overflow-y: scroll;
+    -ms-overflow-style: none;  /* Internet Explorer 10+ */
+    scrollbar-width: none;  /* Firefox */
+}
+
+body::-webkit-scrollbar { /* WebKit */
+    width: 0;
+    height: 0;
 }
 
 body {
