--- a/CSS/projects.css
+++ b/CSS/projects.css
@@ -19,6 +19,13 @@ li{
     border-radius: 8px;
 }
 
+ul {
+	position: relative;
+	list-style: none;
+	margin-left: 0;
+	padding-left: 1.2em;
+}
+
 .buttoncontainer {
     display: flex;
     justify-content: center;
@@ -27,6 +34,7 @@ li{
 
 .description {
     font-size: 20px;
+    line-height: 20px
 }
 
 .player-container {
@@ -59,10 +67,9 @@ img {
     transition: 200ms;
 }
 
-img:hover {
+img.interactable:hover {
     transform: scale(1.025);
     opacity: 0.9;
     border: #333;
-    outline: solid 2px rgb(66, 184, 135);
-
+    outline: solid 2px var(--green-color);
 }
