--- a/CSS/projects.css
+++ b/CSS/projects.css
@@ -7,7 +7,7 @@
     gap: 5px;
 }
 
-li{
+li.s{
     background-color: #04041ebf;
     border: none;
     color: white;
@@ -17,6 +17,16 @@ li{
     transition: 200ms;
     margin-right: 15px;
     border-radius: 8px;
+}
+
+li{
+    border: none;
+    color: white;
+    padding: 10px 20px;
+    text-decoration: none;
+    font-size: 15px;
+    transition: 200ms;
+    margin-right: 15px;
 }
 
 ul {
