--- a/CSS/style.css
+++ b/CSS/style.css
@@ -167,7 +167,7 @@ h2 {
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
-    font-size: 22px;
+    font-size: 1.6em;
     opacity: 0.6;
     transition: 0.5s;
 }
@@ -197,7 +197,7 @@ h2 {
     
     bottom: 0;
 
-    font-size: 12px;
+    font-size: 0.8em;
 }
 
 
@@ -258,7 +258,7 @@ button {
     padding: 30px 75px;
     text-decoration: none;
     display: inline-block;
-    font-size: 30px;
+    font-size: 2.2em;
     transition: 200ms;
     border-radius: 8px;
 }
