--- a/CSS/topnav.css
+++ b/CSS/topnav.css
@@ -21,7 +21,7 @@
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
-    font-size: 22px;
+    font-size: 1.5em;
     opacity: 0.6;
     transition: 0.5s;
     border-bottom: 3px solid var(--topnav-color)
