--- a/CSS/style.css
+++ b/CSS/style.css
@@ -430,9 +430,9 @@ iframe {
         font-size: 5vw;
     }
 
-    #smallbox {
+    /* #smallbox {
         width: relative;
-    }
+    } */
 }
 
 /* #endregion */
