--- a/CSS/buttons.css
+++ b/CSS/buttons.css
@@ -52,9 +52,7 @@ button:hover {
     button {
         border: none;
         color: white;
-        padding: 20px 0px;
-        text-decoration: none;
-        display: inline-block;
+        padding: 30px 50px;
         font-size: 1.4em;
         transition: 200ms;
         margin-right: 15px;
@@ -62,14 +60,20 @@ button:hover {
     }
 
     .backbutton {
-        border: none;
-        color: white;
-        padding: 10px 30px;
-        text-decoration: none;
-        display: inline-block;
+        padding: 30px 50px;
         font-size: 1.4em;
-        transition: 200ms;
-        margin-right: 15px;
-        border-radius: 8px;
+    }
+
+    .buttoncontainer
+    {
+        gap: 1em;
+    }
+}
+
+@media (max-width: 500px) 
+{
+    .backbutton {
+        padding: 20px 20px;
+        font-size: 1em;
     }
 }
