--- a/CSS/projects.css
+++ b/CSS/projects.css
@@ -36,7 +36,7 @@ ul {
 
 .description {
     font-size: 1.1em;
-    line-height: 1.25em
+    line-height: 1.1em;
 }
 
 .player-container {
@@ -79,12 +79,27 @@ img.interactable:hover {
 @media (max-width: 768px)
 {
     .description {
-        font-size: 0.6em;
-        line-height: 1em
+        font-size: 1em;
     }
 
     ul {
-        font-size: 0.5em;
+        font-size: 1em;
+    }
+
+    li.s{
+        font-size: 1em;
+    }
+}
+
+@media (max-width: 500px)
+{
+    .description {
+        font-size: 0.9em;
+    }
+
+    
+    ul {
+        font-size: 0.8em;
     }
 
     li.s{
