--- a/CSS/contentboxes.css
+++ b/CSS/contentboxes.css
@@ -34,7 +34,7 @@
     padding: 0px 10px 0px;
 }
 
-@media (max-width: 768px)
+@media (max-width: 1000px)
 {
     .main {
         width: 92.5%;
@@ -47,6 +47,7 @@
     }
 
     .title {
+        width: 85%;
         font-family: 'Helvetica Neue', sans-serif;
         color: white;
         font-size: 250%;
