--- a/CSS/global.css
+++ b/CSS/global.css
@@ -3,9 +3,13 @@
     font-family: sans-serif;
 }
 
+h1 {
+    font-family: "Lucida Console", "Courier New", monospace;
+    font-size: 2.5em;
+}
 h2 {
     font-family: "Lucida Console", "Courier New", monospace;
-    font-size: 2em;
+    font-size: 1.6em;
 }
 
 h3{
@@ -39,10 +43,10 @@ br {
     border: 1px solid rgba(0, 0, 0, .2);
 }
 
-@media (max-width: 900px) 
+@media (max-width: 1000px) 
 {
     h1 {
-        font-size: 1.2em;
+        font-size: 1.4em;
     }
 
     h2 {
@@ -62,7 +66,7 @@ br {
 @media (max-width: 500px) 
 {
     h1 {
-        font-size: 1em;
+        font-size: 1.3em;
     }
 
     h2 {
