--- a/CSS/topnav.css
+++ b/CSS/topnav.css
@@ -1,11 +1,13 @@
 .topnav-alignment {
     width: 55%;
     background-color: var(--topnav-color);
-    position: relative;
     padding-left: 20px;
     padding-right: 20px;
-    top: 0;
+    position: fixed;
+    left: 50%; transform: translate(-50%, 0);
     margin: auto;
+    top: 0;
+    z-index: 1;
 }
 
 .topnav {
@@ -57,6 +59,5 @@
         width: 20%;
         padding: 10px 8px;
         font-size: 1.2em;
-
     }
 }
