--- a/CSS/global.css
+++ b/CSS/global.css
@@ -18,6 +18,7 @@ h3{
     font-family: "Lucida Console", "Courier New", monospace;
     color: var(--green-color);
     font-size: 2em;
+    margin-bottom: 0;
 }
 
 h4{
