--- a/CSS/projects.css
+++ b/CSS/projects.css
@@ -7,19 +7,21 @@
     gap: 5px;
 }
 
-li.s{
-    border-radius: 8px;
-}
+
 
 li{
     border: none;
     color: white;
     padding: 10px 20px;
     text-decoration: none;
-    font-size: 1em;
+    font-size: 1.2em;
     transition: 200ms;
     margin-right: 15px;
 }
+
+/* li.s{
+    border-radius: 8px;
+} */
 
 ul {
 	position: relative;
@@ -28,6 +30,7 @@ ul {
 	padding-left: 1.2em;
 }
 
+
 .buttoncontainer {
     display: flex;
     justify-content: center;
@@ -35,8 +38,13 @@ ul {
 }
 
 .description {
-    font-size: 1.1em;
+    font-size: 1.3em;
     line-height: 1.1em;
+}
+
+.reference {
+    font-style: italic;
+    text-align: end;
 }
 
 .player-container {
@@ -52,16 +60,19 @@ ul {
 
 iframe {
     width: 100%;
-    /* height: auto;
-    object-fit: contain; */
   }
 
 /* Images */
 
 img {
-    max-width: 90%;
+    max-width: 100%;
     height: auto;
     transition: 200ms;
+}
+
+img.interactable
+{
+    max-width: 90%;
 }
 
 img.interactable:hover {
@@ -95,6 +106,7 @@ img.interactable:hover {
     
     ul {
         font-size: 0.8em;
+        padding: 0;
     }
 
     li.s{
