--- a/CSS/global.css
+++ b/CSS/global.css
@@ -50,6 +50,32 @@ br {
     border: 1px solid rgba(0, 0, 0, .2);
 }
 
+/* Link Settings */
+
+a:link {
+    color: pink;
+    background-color: transparent;
+    text-decoration: none;
+  }
+  
+  a:visited {
+    color: var(--button-color);
+    background-color: transparent;
+    text-decoration: none;
+  }
+  
+  a:hover {
+    color: var(--green-color);
+    background-color: transparent;
+    text-decoration: underline;
+  }
+  
+  a:active {
+    color: yellow;
+    background-color: transparent;
+    text-decoration: underline;
+  }
+
 @media (max-width: 1000px) 
 {
     h1 {
